// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<h3
  className="sc-iNFqmR kVJHPw"
>
  Heading
</h3>
`;

exports[`Caption renders colors 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-iNFqmR kVJHPw"
  >
    Defaul color is Bulma
  </h3>
  <h3
    className="sc-iNFqmR fWHnIh"
    color="piccolo.100"
  >
    Piccolo
  </h3>
  <h3
    className="sc-iNFqmR izdcir"
    color="trunks.100"
  >
    Trunks
  </h3>
  <h3
    className="sc-iNFqmR eTGvDp"
    color="krillin.100"
  >
    Krillin
  </h3>
</div>
`;

exports[`Caption renders font-weight 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-iNFqmR kVJHPw"
  >
    Defaul font-weight is bold
  </h3>
  <h3
    className="sc-iNFqmR iRSkaB"
  >
    Font-weight is regular
  </h3>
</div>
`;

exports[`Caption renders semantic tags 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-iNFqmR kVJHPw"
  >
    H3 is a default tag
  </h3>
  <h2
    className="sc-iNFqmR kVJHPw"
  >
    H2 tag
  </h2>
  <h6
    className="sc-iNFqmR kVJHPw"
  >
    H6 tag
  </h6>
</div>
`;

exports[`Caption renders sizes 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-iNFqmR kVJHPw"
  >
    Defaul font-size is 16px
  </h3>
  <h3
    className="sc-iNFqmR jPllyj"
    size={24}
  >
    Size is 24px
  </h3>
  <h3
    className="sc-iNFqmR jrtybn"
    size={48}
  >
    Size is 48px
  </h3>
</div>
`;

exports[`Caption renders text-align 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <h3
    className="sc-iNFqmR kVJHPw"
  >
    Text-align is not specified
  </h3>
  <h3
    className="sc-iNFqmR QGpuT"
  >
    Centered text
  </h3>
  <h3
    className="sc-iNFqmR dQrJYU"
  >
    Right alignment
  </h3>
</div>
`;
